--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -2,21 +2,23 @@
 <div class="container">
   <div class="row">
 
-      <% @flats.each do |flat| %>
-        <%= link_to flat_path(flat) do %>
-          <div class="col-xs-4">
-            <div class="card" style="background-color: lightgrey;">
-              <div class="card-category"><%=  flat.price%> </div>
-              <div class="card-description">
-                <h2> <%=  flat.title%></h2>
-                <p> <%= flat.description %></p>
-              </div>
-            </div>
-          </div>
-        <% end %>
-      <% end %>
-
+    <% @flats.each do |flat| %>
+    <%= link_to flat_path(flat) do %>
+    <div class="col-xs-4">
+      <div class="card"
+      style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
+      url('<%= cl_image_path flat.photo, height: 300, width: 400, crop: :fill %>')">
+      <div class="card-category"><%=  flat.price%> </div>
+      <div class="card-description">
+        <h2> <%=  flat.title%></h2>
+        <p> <%= flat.description %></p>
+      </div>
+    </div>
   </div>
+  <% end %>
+  <% end %>
+
+</div>
 </div>
 <p><%= link_to "create a flat", new_flat_path(@flat), class: "btn btn-primary"%></p>
 
