--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,4 +1,5 @@
 <h1>Flat show</h1>
+<%= cl_image_tag @flat.photo, height: 300, width: 400, crop: :fill %>
 
 <p><%= @flat.description %></p>
 <p><%= @flat.title %></p>
