add booking flat (controller, routes)

--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -10,5 +10,6 @@
       method: :delete,
       data: { confirm: "Are you sure?" } %></p>
 <p> <%= link_to "Go to index", flats_path %></p>
+<p> <%= link_to "Book", new_flat_booking_path(@flat) %></p>
 
 
