--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,9 @@
   <%= stylesheet_link_tag 'application', media: 'all' %>
 </head>
 <body>
-
-  <%= render "shared/navbar"  %>
+  <%= render "shared/navbar" %>
   <%= yield %>
+  <p><%= link_to "List your bookings", bookings_path %></p>
   <%= javascript_include_tag 'application' %>
   <%= render "shared/footer"  %>
 
