--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <body>
   <%= render "shared/navbar" %>
   <%= yield %>
-  <p><%= link_to "List your bookings", bookings_path %></p>
+  <!-- <p><%= link_to "List your bookings", bookings_path %></p> -->
   <%= javascript_include_tag 'application' %>
   <%= render "shared/footer"  %>
 
