buttons fixings, responsiveness also added

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,10 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Home</h1>
 
-<%=   link_to "index page", flats_path %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-offset-4 col-md-4 text-center">
+      <p> <%=link_to "index page", flats_path , class: "btn btn-primary" %></p>
+    </div>
+  </div>
+</div>
+
