--- a/app/views/flats/edit.html.erb
+++ b/app/views/flats/edit.html.erb
@@ -1,10 +1,19 @@
 <h1>Edit a flat</h1>
 
-<p><%= simple_form_for @flat do |f| %></p>
-<p> <%= f.input :address %> </p>
-<p> <%= f.input :description %></p>
-<p><%= f.input :title %></p>
-<p><%= f.input :price %></p>
- <p><%= f.submit "save", class: "btn btn-primary" %></p>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-offset-4 col-md-4 text-center">
+      <p><%= simple_form_for @flat do |f| %></p>
+      <p> <%= f.input :address %> </p>
+      <p> <%= f.input :description %></p>
+      <p><%= f.input :title %></p>
+      <p><%= f.input :price %></p>
+       <p><%= f.submit "save", class: "btn btn-primary" %></p>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+
+
 
