--- a/app/views/flats/new.html.erb
+++ b/app/views/flats/new.html.erb
@@ -1,9 +1,16 @@
 <h1>Create a new flat</h1>
-<p>Find me in app/views/flats/new.html.erb</p>
-<%= simple_form_for @flat do |f| %>
-  <%= f.input :address %>
-  <%= f.input :description %>
-  <%= f.input :title %>
-  <%= f.input :price %>
-  <%= f.submit "add a flat", class: "btn btn-primary" %>
-<% end %>
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-offset-4 col-md-4 text-center">
+      <%= simple_form_for @flat do |f| %>
+      <%= f.input :address %>
+      <%= f.input :description %>
+      <%= f.input :title %>
+      <%= f.input :price %>
+      <%= f.submit "add a flat", class: "btn btn-primary" %>
+    <% end %>
+    </div>
+  </div>
+</div>
