--- a/app/views/shared/_navatar.html.erb
+++ b/app/views/shared/_navatar.html.erb
@@ -1,5 +1,5 @@
 <% if current_user %>
 	<img src="https://kitt.lewagon.com/placeholder/users/ssaunier" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown">
 <% else %>
-	<li style="list-style-type: none;""><a style="color: #000000 !important;"><%= link_to 'Log In', new_user_session_path %></a></li>
+	<li style="list-style-type: none;""><%= link_to 'Login', new_user_session_path, class: "btn-login" %></li>
 <% end %>
