--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -7,7 +7,7 @@
     <div class="col-xs-4">
       <div class="card"
       style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
-      url('<%= cl_image_path flat.photo, height: 300, width: 400, crop: :fill %>')">
+      url('<%= cl_image_path flat.photo, height: 300, width: 400, crop: :fill if flat.photo? %>')">
       <div class="card-category"><%=  flat.price%> </div>
       <div class="card-description">
         <h2> <%=  flat.title%></h2>
