--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,29 @@
   <%= stylesheet_link_tag 'application', media: 'all' %>
 </head>
 <body>
+  <script>
+    window.fbAsyncInit = function() {
+      FB.init({
+        appId      : '{413442072403459',
+        cookie     : true,
+        xfbml      : true,
+        version    : '{2.11}'
+      });
+        
+      FB.AppEvents.logPageView();
+        
+    };
 
+    (function(d, s, id){
+       var js, fjs = d.getElementsByTagName(s)[0];
+       if (d.getElementById(id)) {return;}
+       js = d.createElement(s); js.id = id;
+       js.src = "https://connect.facebook.net/en_US/sdk.js";
+       fjs.parentNode.insertBefore(js, fjs);
+     }(document, 'script', 'facebook-jssdk'));
+  </script>
+
+  
   <%= render "shared/navbar"  %>
   <% if notice %>
     <div class="alert alert-info alert-dismissible" role="alert">
