--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,5 +1,8 @@
 <h1>Flat show</h1>
-<%= cl_image_tag @flat.photo, height: 300, width: 400, crop: :fill %>
+<% if @flat.photo.nil? %>
+<% else  %>
+  <%= cl_image_tag @flat.photo, height: 300, width: 400, crop: :fill %>
+<% end %>
 
 <div class="container">
   <div class="row">
