bookings views and adding approved to resources

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,9 +1,2 @@
-<h1>Bookings#new</h1>
-<p>Find me in app/views/bookings/new.html.erb</p>
-
-<%= simple_form_for [@flat, @booking] do |f| %>
-  <%= f.input :initial_date %>
-  <%= f.input :number_nights %>
-  <!-- <%= @booking.total_price %> -->
-  <%= f.submit "booking request", class: "btn btn-primary" %>
-<% end %>
+<!-- Booking creation is displayed in
+flats show  -->
