--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Bookings#show</h1>
+<h1>Your Booking</h1>
 <p> Description flat: </p>
 <p><%= @flat.description %></p>
 <p><%= @flat.title %></p>
