--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,9 +1,18 @@
-<h1>Bookings#index</h1>
-<p>Find me in app/views/bookings/index.html.erb</p>
+<h1>All Your Bookings</h1>
 
-<p><%= current_user %></p>
-<p><% @bookings.each |book| do%></p>
-<p><%=  %></p>
-<p><%= book.initial_date %></p>
-<p><%= book.number_nights %></p>
-<p><% end %></p>
+<div class="container"><p><%= current_user %></p>
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-offset-4 col-md-4 text-center">
+      <p><% @bookings.each |book| do%></p>
+      <p><%=  %></p>
+      <p><%= book.initial_date %></p>
+      <p><%= book.number_nights %></p>
+      <p><% end %></p>
+      <!-- Delete a booking  -->
+      <p> <%= link_to "Delete", flat_booking(@booking), class: "btn btn-primary",
+      method: :delete,
+      data: { confirm: "Are you sure?" } %></p>
+    </div>
+  </div>
+</div>
+
