--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -22,6 +22,22 @@
   </div>
 </div>
 
+<!-- Booking creation form-->
+<div class="container">
+  <div class="row">
+    <div>
+      <h1>Create your Booking</h1>
+        <%= simple_form_for [@flat, @booking] do |f| %>
+        <%= f.input :initial_date %>
+        <%= f.input :number_nights %>
+        <!-- <%= @booking.total_price %> -->
+        <%= f.submit "booking request", class: "btn btn-primary" %>
+        <% end %>
+        <p> <%= link_to "Back to All Your Bookings", flat_bookings_path(@flat), class: "btn btn-primary" %></p>
+    </div>
+  </div>
+</div>
+
 
 
 <% content_for(:after_js) do %>
