--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,6 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-offset-4 col-md-4 text-center">
+       <%= render "shared/banner" %>
       <p> <%=link_to "index page", flats_path , class: "btn btn-primary" %></p>
     </div>
   </div>
