--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://noticias.spainhouses.net/wp-content/uploads/interior-vistas1.jpg');">
+git <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://noticias.spainhouses.net/wp-content/uploads/interior-vistas1.jpg');">
   <div class="banner-content">
     <h1>Book a flat</h1>
     <p>Live like a local</p>
