--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,17 +1,25 @@
 <h1>All Your Bookings</h1>
 
-<div class="container"><p><%= current_user %></p>
+<div class="container">
+
+  <p>
+    <%current_user %>
+  </p>
+
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-offset-4 col-md-4 text-center">
-      <p><% @bookings.each |book| do%></p>
-      <p><%=  %></p>
-      <p><%= book.initial_date %></p>
-      <p><%= book.number_nights %></p>
-      <p><% end %></p>
-      <!-- Delete a booking  -->
-      <p> <%= link_to "Delete", flat_booking(@booking), class: "btn btn-primary",
-      method: :delete,
-      data: { confirm: "Are you sure?" } %></p>
+
+      <% @my_bookings.each do |booking| %>
+          <p><%= booking.initial_date %></p>
+          <p><%= booking.number_nights %></p>
+        <!-- Delete a booking  -->
+          <% flat = booking.flat %>
+          <p> <%= link_to "Delete", flat_booking_path(flat, booking),
+          method: :delete,
+          data: { confirm: "Are you sure?" },
+          class: "btn btn-primary" %></p>
+      <% end %>
+
     </div>
   </div>
 </div>
