--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -7,15 +7,14 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-offset-4 col-md-4 text-center">
-      <p><%= @flat.description %></p>
-      <p><%= @flat.title %></p>
-      <p><%= @flat.address %></p>
-      <p><%= @flat.price %></p>
-      <p><%= link_to "Edit this flat", edit_flat_path(@flat), class: "btn btn-primary" %></p>
+      <p class="flat-show-big-p"><%= @flat.description %></p>
+      <p class="flat-show-big-p"><%= @flat.title %></p>
+      <p class="flat-show-big-p"><%= @flat.address %></p>
+      <p class="flat-show-big-p"><%= @flat.price %></p>
+      <p class="flat-show-big-p"><%= link_to "Edit this flat", edit_flat_path(@flat), class: "btn btn-primary" %></p>
       <p> <%= link_to "Delete", flat_path(@flat), class: "btn btn-primary",
       method: :delete,
       data: { confirm: "Are you sure?" } %></p>
-      <p> <%= link_to "Book", new_flat_booking_path(@flat),class: "btn btn-primary" %></p>
 
       <p> <%= link_to "Go to index", flats_path, class: "btn btn-primary" %></p>
     </div>
@@ -25,7 +24,7 @@
 <!-- Booking creation form-->
 <div class="container">
   <div class="row">
-    <div <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-offset-4 col-md-4 text-center">>
+    <div <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-offset-4 col-md-4 text-center">
       <h1>Book this flat</h1>
         <%= simple_form_for [@flat, @booking] do |f| %>
         <%= f.input :initial_date %>
