Change homepage photo

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,9 +7,9 @@
 });
 </script>
 
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://kitt.lewagon.com/placeholder/cities/berlin');">
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 20%), url('https://noticias.spainhouses.net/wp-content/uploads/interior-vistas1.jpg');">
   <div class="banner-content">
-    <h1>AirBnb</h1>
+    <h1>Book a flat</h1>
     <p>Escape into luxury</p>
     <!-- <a class="btn btn-primary btn-lg" id="button">Let's go!</a> -->
     <%= link_to "Let's Go", flats_path, class: "btn btn-primary btn-lg" %>
