--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,10 +6,11 @@
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
+    <%= link_to "Host" , new_flat_path, { :class=>"navbar-wagon-item navbar-wagon-link" } %>
+    <%= link_to "Trips" , bookings_path, { :class=>"navbar-wagon-item navbar-wagon-link" } %>
+    <%= link_to "Messages" , new_flat_path,  { :class=>"navbar-wagon-item navbar-wagon-link" }%>
 
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Host</a>
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Trips</a>
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Messages</a>
+
     <% if !current_user %>
       <%= link_to 'Login', new_user_session_path, class: "btn-login navbar-wagon-link navbar-wagon-item" %>
       <%= link_to 'Sign Up', new_user_registration_path, class: "btn-login navbar-wagon-link navbar-wagon-item" %>
@@ -41,9 +42,9 @@
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Host</a></li>
-        <li><a href="#">Trips</a></li>
-        <li><a href="#">Messages</a></li>
+        <li><%= link_to "Host" , new_flat_path, { :class=>"navbar-wagon-item navbar-wagon-link" } %></li>
+        <li><%= link_to "Trips" , bookings_path, { :class=>"navbar-wagon-item navbar-wagon-link" } %></li>
+        <li><%= link_to "Messages" , new_flat_path,  { :class=>"navbar-wagon-item navbar-wagon-link" }%></li>
       </ul>
     </div>
   </div>
