linking bookings to user and flats to owner

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,26 +1,1 @@
-<h1>All Your Bookings</h1>
-
-<div class="container">
-
-  <p>
-    <%current_user %>
-  </p>
-
-  <div class="row">
-    <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-offset-4 col-md-4 text-center">
-
-      <% @my_bookings.each do |booking| %>
-          <p class="bookings-index-p">Starting date:<%= booking.initial_date %></p>
-          <p class="bookings-index-p">Number of Nights:<%= booking.number_nights %></p>
-        <!-- Delete a booking  -->
-          <% flat = booking.flat %>
-          <p> <%= link_to "Delete", flat_booking_path(flat, booking),
-          method: :delete,
-          data: { confirm: "Are you sure?" },
-          class: "btn btn-primary" %></p>
-      <% end %>
-
-    </div>
-  </div>
-</div>
-
+<h1>All Bookings from App</h1>
