--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,5 +1,9 @@
 <h1>Flats</h1>
 
+
+<%= link_to "go to my bookings", my_bookings_path, class: "btn btn-primary"  %>
+
+
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-offset-4 col-md-4 text-center">
