--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
     <%= link_to "Host" , new_flat_path, { :class=>"navbar-wagon-item navbar-wagon-link" } %>
-    <%= link_to "Trips" , bookings_path, { :class=>"navbar-wagon-item navbar-wagon-link" } %>
+    <%= link_to "Bookings" , my_bookings_path, { :class=>"navbar-wagon-item navbar-wagon-link" } %>
     <%= link_to "Messages" , new_flat_path,  { :class=>"navbar-wagon-item navbar-wagon-link" }%>
 
 
@@ -43,7 +43,7 @@
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
         <li><%= link_to "Host" , new_flat_path, { :class=>"navbar-wagon-item navbar-wagon-link" } %></li>
-        <li><%= link_to "Trips" , bookings_path, { :class=>"navbar-wagon-item navbar-wagon-link" } %></li>
+        <li><%= link_to "Bookings" , my_bookings_path, { :class=>"navbar-wagon-item navbar-wagon-link" } %></li>
         <li><%= link_to "Messages" , new_flat_path,  { :class=>"navbar-wagon-item navbar-wagon-link" }%></li>
       </ul>
     </div>
