--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@profile) do |f| %>
+<%= simple_form_for [current_user, profile] do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
