--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,11 +21,8 @@
         <%= render 'shared/navatar' %>
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
           <li>
-            <a href="#">
             <% if current_user %>
-              <%= current_user.email %>
-              <% else %>
-              <% "Log In" %>
+              <%= link_to 'Profile', user_profile_path(id: current_user.profile.id, user_id: current_user.id) %>
             <% end %>
             </a>
           </li>
