--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -8,6 +8,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  // stciky navbar
+  position: sticky;
+  top: 0;
+  z-index: 3;
 }
 
 .btn-login {
