--- a/app/views/flats/new.html.erb
+++ b/app/views/flats/new.html.erb
@@ -1,9 +1,9 @@
-<h1>Create a new flat</h1>
 
 
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-offset-4 col-md-4 text-center">
+      <h1>Host a new flat</h1>
       <%= simple_form_for @flat do |f| %>
       <%= f.input :title, placeholder: 'Modernista Two Bed' %>
       <%= f.input :address, placeholder: 'Street, City'  %>
