--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,6 +6,7 @@
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
+    <%= link_to "Flats" , flats_path, { :class=>"navbar-wagon-item navbar-wagon-link" } %>
     <%= link_to "Host" , new_flat_path, { :class=>"navbar-wagon-item navbar-wagon-link" } %>
     <%= link_to "Bookings" , my_bookings_path, { :class=>"navbar-wagon-item navbar-wagon-link" } %>
     <%= link_to "Messages" , new_flat_path,  { :class=>"navbar-wagon-item navbar-wagon-link" }%>
