--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,16 +1,18 @@
 <%= simple_form_for [current_user, profile] do |f| %>
-  <%= f.error_notification %>
+<%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :name %>
-    <%= f.input :gender %>
-    <%= f.input :birthday %>
-    <%= f.input :phone %>
-    <%= f.input :location %>
-    <%= f.input :bio %>
-  </div>
+<div class="form-inputs">
+  <%= f.input :name %>
+  <%= f.input :gender %>
+  <%= f.input :birthday %>
+  <%= f.input :phone %>
+  <%= f.input :location %>
+  <%= f.input :bio %>
+  <%= f.input :photo %>
+  <%= f.input :photo_cache, as: :hidden %>
+</div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+<div class="form-actions">
+  <%= f.button :submit %>
+</div>
 <% end %>
