--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,34 +1,44 @@
-<p id="notice"><%= notice %></p>
+  <div class="card"
+  style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
+  url('<%= cl_image_path @profile.photo if @profile.photo? %>')">
+</div>
+<div class="container">
 
-<p>
-  <strong>Name:</strong>
-  <%= @profile.name %>
-</p>
+  <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Gender:</strong>
-  <%= @profile.gender %>
-</p>
+  <p>
+    <strong>Name:</strong>
+    <%= @profile.name %>
+  </p>
 
-<p>
-  <strong>Birthday:</strong>
-  <%= @profile.birthday %>
-</p>
+  <p>
+    <strong>Gender:</strong>
+    <%= @profile.gender %>
+  </p>
 
-<p>
-  <strong>Phone:</strong>
-  <%= @profile.phone %>
-</p>
+  <p>
+    <strong>Birthday:</strong>
+    <%= @profile.birthday %>
+  </p>
 
-<p>
-  <strong>Location:</strong>
-  <%= @profile.location %>
-</p>
+  <p>
+    <strong>Phone:</strong>
+    <%= @profile.phone %>
+  </p>
 
-<p>
-  <strong>Bio:</strong>
-  <%= @profile.bio %>
-</p>
+  <p>
+    <strong>Location:</strong>
+    <%= @profile.location %>
+  </p>
 
-<%= link_to 'Edit', edit_user_profile_path(current_user, @profile) %> 
+  <p>
+    <strong>Bio:</strong>
+    <%= @profile.bio %>
+  </p>
+
+
+
+  <%= link_to 'Edit', edit_user_profile_path(current_user, @profile) %>
+
+</div>
 
