--- a/app/assets/stylesheets/components/_avatars.scss
+++ b/app/assets/stylesheets/components/_avatars.scss
@@ -3,8 +3,11 @@
   border-radius: 50%;
 }
 .avatar-large {
-  width: 50px;
+  width: 100px;
   border-radius: 50%;
+  position: absolute;
+  top: 5px;
+  right: 10px;
 }
 .avatar-bordered {
   width: 30px;
