--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
     <h1>Book a flat</h1>
     <p>Escape into luxury</p>
     <!-- <a class="btn btn-primary btn-lg" id="button">Let's go!</a> -->
-    <%= link_to "Let's Go", flats_path, class: "btn btn-primary btn-lg" %>
+    <%= link_to "Let's go", flats_path, class: "btn btn-primary btn-lg" %>
   </div>
 </div>
 
