--- a/app/views/shared/_navatar.html.erb
+++ b/app/views/shared/_navatar.html.erb
@@ -1,3 +1,4 @@
 <% if current_user %>
-	<img src="https://kitt.lewagon.com/placeholder/users/ssaunier" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown">
+	<img src="<%= cl_image_path current_user.profile.photo if current_user.profile.photo? %>" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown">
 <% end %>
+
