--- a/app/assets/stylesheets/pages/flats_show.scss
+++ b/app/assets/stylesheets/pages/flats_show.scss
@@ -1,17 +1,22 @@
 .flat-show-big-p {
-  font-size: 24px;
+  font-size: 18px;
   color: #000000;
+  font-weight: lighter;
+  margin-bottom: 0;
 
 }
 
 .bookings-index-p {
-  font-size: 24px;
+  font-size: 18px;
   color: #000000;
+  font-weight: lighter;
+  margin-bottom: 0;
 
 }
 
 .my-props-p {
-  font-size: 24px;
+  font-size: 18px;
   color: #000000;
-
+  font-weight: lighter;
+  margin-bottom: 0;
 }
