--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -4,10 +4,26 @@
   padding: 10px 15px;
   border-radius: 50px;
   font-weight: lighter;
-  opacity: 0.6;
 }
 .btn-primary:hover {
-  opacity: 1;
+  opacity: 0.9;
   text-decoration: none;
-  color: black;
+  color: #f2f2f2;
+  border: 1px solid #bfbfbf;
+}
+
+.btn-primary-sm {
+  color: white;
+  border: 1px solid #999999;
+  padding: 6px 8px;
+  border-radius: 20px;
+  font-weight: lighter;
+  font-size: 12px;
+  background-color: #408ED1;
+}
+.btn-primary-sm:hover {
+  opacity: 0.9;
+  text-decoration: none;
+  color: #f2f2f2;
+  border: 1px solid #bfbfbf;
 }
