Home search and button styling

--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -2,7 +2,7 @@
     <div class="text-center">
       <h1>Select a flat to book</h1>
       <p>Click on an image to request a booking</p>
-      <p><%= link_to "Become a host", new_flat_path(@flat), class: "btn btn-primary"%></p>
+      <p><%= link_to "Post a flat and become a host", new_flat_path(@flat), class: "btn-secondary"%></p>
 
     </div>
   </div>
