--- a/app/views/flats/new.html.erb
+++ b/app/views/flats/new.html.erb
@@ -9,7 +9,7 @@
       <%= f.input :price, placeholder: '120€'  %>
       <%= f.input :photo %>
       <%= f.input :photo_cache, as: :hidden %>
-      <%= f.submit "add a flat", class: "btn btn-primary" %>
+      <%= f.submit "add a flat", class: "btn-submit" %>
       <% end %>
     </div>
   </div>
