--- a/app/views/bookings/my_bookings.html.erb
+++ b/app/views/bookings/my_bookings.html.erb
@@ -18,7 +18,7 @@
       <p> <%= link_to "Delete", flat_booking_path(flat, booking),
       method: :delete,
       data: { confirm: "Are you sure?" },
-      class: "btn btn-primary" %></p>
+      class: "btn-primary" %></p>
       <% end %>
 
     </div>
