--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -28,7 +28,7 @@
             <% end %>
             </a>
           </li>
-          <li><a href="#">Dashboard</a></li>
+          <li><%= link_to "Dashboard" , dashboard_index_path %></li>
           <%= render 'shared/sign_in_out' %>
         </ul>
       </div>
