--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -5,13 +5,14 @@
   padding: 10px 15px;
   border-radius: 4px;
   font-weight: lighter;
+  border-color: #FFFFFF;
 }
 .btn-primary:hover {
   opacity: 0.9;
   text-decoration: none;
   color: #f2f2f2;
-  background: #FF5A5F
-  // border: 1px solid #bfbfbf;
+  background: #FF5A5F;
+  border: 1px solid #FFFFFF;
 }
 
 .btn-secondary {
