--- a/app/assets/stylesheets/pages/flats_show.scss
+++ b/app/assets/stylesheets/pages/flats_show.scss
@@ -3,6 +3,7 @@
   color: #000000;
   font-weight: lighter;
   margin-bottom: 0;
+  margin-bottom: 10px;
 
 }
 
@@ -19,4 +20,9 @@
   color: #000000;
   font-weight: lighter;
   margin-bottom: 0;
+}
+
+#wrapper {
+    width: 500px;
+    margin: 0 auto;
 }
