--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -8,11 +8,10 @@
   border-color: #FFFFFF;
 }
 .btn-primary:hover {
-  opacity: 0.9;
   text-decoration: none;
   color: #f2f2f2;
-  background: #FF5A5F;
-  border: 1px solid #FFFFFF;
+  background: #f95e63;
+  border: 1px solid #ededed;
 }
 
 .btn-secondary {
