--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
     <%= link_to "Flats" , flats_path, { :class=>"navbar-wagon-item navbar-wagon-link" } %>
     <%= link_to "Host" , new_flat_path, { :class=>"navbar-wagon-item navbar-wagon-link" } %>
     <%= link_to "Trips" , my_bookings_path, { :class=>"navbar-wagon-item navbar-wagon-link" } %>
-    <%= link_to "Requests" , new_flat_path,  { :class=>"navbar-wagon-item navbar-wagon-link" }%>
+    <%= link_to "Requests" , requests_path,  { :class=>"navbar-wagon-item navbar-wagon-link" }%>
 
 
 
